Fixed relative paths to images

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <td class="quantity__1">0</td>
                 <td>$0.93</td>
                 <td>$10.00</td>
-                <td><img src="C:\Users\Jasmyne.Boggs\Desktop\projects\VUCS-Inventory-Mockup\skull ring.png" width="200" height="200" alt="skull ring"></td>
+                <td><img src="skull ring.png" width="200" height="200" alt="skull ring"></td>
                 <td><select class="add__type">
                     <option value="add" selected>+</option>
                     <option value="subtract" selected>-</option>
@@ -47,7 +47,7 @@
                 <td class="quantity__2">0</td>
                 <td>$0.93</td>
                 <td>$10.00</td>
-                <td><img src="C:\Users\Jasmyne.Boggs\Desktop\projects\VUCS-Inventory-Mockup\skull ring.png"  width="200" height="200" alt="skull ring"></td>
+                <td><img src="skull ring.png"  width="200" height="200" alt="skull ring"></td>
                 <td><select class="add__type">
                         <option value="add" selected>+</option>
                         <option value="subtract" selected>-</option>
@@ -61,7 +61,7 @@
                 <td class="quantity__3">0</td>
                 <td>$0.93</td>
                 <td>$10.00</td>
-                <td><img src="C:\Users\Jasmyne.Boggs\Desktop\projects\VUCS-Inventory-Mockup\skull ring.png"  width="200" height="200" alt="skull ring"></td>
+                <td><img src="skull ring.png"  width="200" height="200" alt="skull ring"></td>
                 <td><select class="add__type">
                         <option value="add" selected>+</option>
                         <option value="subtract" selected>-</option>
@@ -75,7 +75,7 @@
                 <td class="quantity__4">0</td>
                 <td>$0.93</td>
                 <td>$10.00</td>
-                <td><img src="C:\Users\Jasmyne.Boggs\Desktop\projects\VUCS-Inventory-Mockup\skull ring.png"  width="200" height="200" alt="skull ring"></td>
+                <td><img src="skull ring.png"  width="200" height="200" alt="skull ring"></td>
                 <td><select class="add__type">
                         <option value="add" selected>+</option>
                         <option value="subtract" selected>-</option>
