--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 </head>
 
 <body>
+    <div>
     <h1 class="p-3 mb-2 bg-success text-white">Rob's Rings</h1>
+    <button type="button" class="btn btn-outline-success" id="add__item">Add Item</button>
+    </div>  
 
 
-
-    <table class="table table-hover">
+    <table class="table table-hover" id="main__table">
         <thead>
             <tr>
                 <th scope="col">Sku #</th>
