Got the generated form working\!

--- a/RobnSteelInitial/feature-add-inventory/index.html
+++ b/RobnSteelInitial/feature-add-inventory/index.html
@@ -118,7 +118,7 @@
               <th scope="col">+/- Inventory</th>
           </tr>
       </thead>
-      <tbody>
+      <!--<tbody>
           <tr>
             <th scope="row">1019</th>
                 <td>VINTAGE SILVER BLACK TIBETAN SKELETON SKULL RING</td>
@@ -135,7 +135,7 @@
                 <button type="button" class="btn btn-sm btn-amber" id="btn">Update</button>
                 </td>
 
-          </tr>
+          </tr>-->
           <!--<tr>
               <th scope="row">1018</th>
               <td>VINTAGE SILVER BLACK TIBETAN SKELETON SKULL RING</td>
@@ -177,8 +177,8 @@
                   </select>
                   <input type="number" class="add__value" placeholder="Value">
                   <button type="button" class="btn btn-success" id="btn3">Select</button></td>
-          </tr>-->
-      </tbody>
+          </tr>
+      </tbody>-->
   </table>
   <!-- /Start your project here-->
 
