Dynamic table header

--- a/RobnSteelInitial/feature-add-inventory/index.html
+++ b/RobnSteelInitial/feature-add-inventory/index.html
@@ -91,9 +91,6 @@
                         </div>
                     </div>-->
                 </div>
-                <!--
-                        Data Points: SKU, Desc, Qty, Cost, Price, Image
-                    -->
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                     <button type="button" class="btn btn-primary" onclick="addRow('table')" data-dismiss="modal">Save</button>
@@ -101,13 +98,14 @@
                 </div>
             </div>
         </div>
+        <!--/Modal-->
     <!-- Collapsible content -->
   
 </nav>
 <!--/.Navbar-->
 
   <table class="table table-hover" id='table'>
-      <thead>
+      <!--<thead>
           <tr>
               <th scope="col">Sku #</th>
               <th scope="col">Description</th>
@@ -117,7 +115,7 @@
               <th scope="col">Image</th>
               <th scope="col">+/- Inventory</th>
           </tr>
-      </thead>
+      </thead>-->
       <!--<tbody>
           <tr>
             <th scope="row">1019</th>
