added a modal pop up

--- a/index.html
+++ b/index.html
@@ -6,15 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>Rob's Rings</title>
+    <link rel="stylesheet" href="robsRings.css">
+    <title>RobNSteel</title>
 </head>
 
 <body>
-    <h1 class="p-3 mb-2 bg-success text-white">Rob's Rings</h1>
-
-
-
-    <table class="table table-hover">
+    <h1 class="p-3 mb-2 bg-success text-white">RobNSteel</h1>
+    <nav class="navbar navbar-light bg-light">
+        <button type="button" class="btn btn-outline-secondary" onclick="addNewItem()">Add Item</button>
+        <form class="form-inline">
+          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+      </nav>
+    <table class="table table-hover" id="main_table">
         <thead>
             <tr>
                 <th scope="col">Sku #</th>
@@ -85,6 +90,19 @@
             </tr>
         </tbody>
     </table>
+    <div class="bg-modal">
+        <div class="modal-content">
+            <form>
+                <div class="close">+</div>
+                <input type="text" id="new_sku" placeholder="Sku">
+                <input type="text" id="new_descrip" placeholder="Description">
+                <input type="text" id="new_qty" placeholder="Quantity">
+                <input type="text" id="new_cost" placeholder="Cost">
+                <input type="text" id="new_price" placeholder="Price">
+                <button type="button" class="btn btn-success" id="btn-add-new">Submit</button>
+            </form>
+        </div>
+    </div>
     <script src="robRings.js"></script>
 </body>
 
