--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
                 <th scope="col">Cost</th>
                 <th scope="col">Price</th>
                 <th scope="col">Image</th>
-                <th scope="col">+/- Inventory</th>
             </tr>
         </thead>
         <tbody>
@@ -39,12 +38,6 @@
                 <td>$0.93</td>
                 <td>$10.00</td>
                 <td><img src="skull ring.png" width="200" height="200" alt="skull ring"></td>
-                <td><select class="add__type">
-                    <option value="add" selected>+</option>
-                    <option value="subtract" selected>-</option>
-                </select>
-                <input type="number" class="add__value" placeholder="Value">
-                <button type="button" class="btn btn-success" id="btn" >Select</button></td>
             </tr>
             <tr>
                 <th scope="row">1018</th>
@@ -53,12 +46,6 @@
                 <td>$0.93</td>
                 <td>$10.00</td>
                 <td><img src="skull ring.png"  width="200" height="200" alt="skull ring"></td>
-                <td><select class="add__type">
-                        <option value="add" selected>+</option>
-                        <option value="subtract" selected>-</option>
-                    </select>
-                    <input type="number" class="add__value" placeholder="Value">
-                    <button type="button" class="btn btn-success" id="btn1">Select</button></td>
             </tr>
             <tr>
                 <th scope="row">1017</th>
@@ -67,12 +54,6 @@
                 <td>$0.93</td>
                 <td>$10.00</td>
                 <td><img src="skull ring.png"  width="200" height="200" alt="skull ring"></td>
-                <td><select class="add__type">
-                        <option value="add" selected>+</option>
-                        <option value="subtract" selected>-</option>
-                    </select>
-                    <input type="number" class="add__value" placeholder="Value">
-                    <button type="button" class="btn btn-success" id="btn2">Select</button></td>
             </tr>
             <tr>
                 <th scope="row">1016</th>
@@ -81,12 +62,6 @@
                 <td>$0.93</td>
                 <td>$10.00</td>
                 <td><img src="skull ring.png"  width="200" height="200" alt="skull ring"></td>
-                <td><select class="add__type">
-                        <option value="add" selected>+</option>
-                        <option value="subtract" selected>-</option>
-                    </select>
-                    <input type="number" class="add__value" placeholder="Value">
-                    <button type="button" class="btn btn-success" id="btn3">Select</button></td>
             </tr>
         </tbody>
     </table>
@@ -99,6 +74,7 @@
                 <input type="text" id="new_qty" placeholder="Quantity">
                 <input type="text" id="new_cost" placeholder="Cost">
                 <input type="text" id="new_price" placeholder="Price">
+                <input type="file"  accept="image/*" name="image" id="file" class="hide_file"  onchange="loadFile(event)">
                 <button type="button" class="btn btn-success" id="btn-add-new">Submit</button>
             </form>
         </div>
