search and table add
updated search and add to table

--- a/index.html
+++ b/index.html
@@ -1,20 +1,72 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>Rob's Rings</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
 </head>
 
+
+
+
 <body>
-    <h1 class="p-3 mb-2 bg-success text-white">Rob's Rings</h1>
+    <!-- for search bar  -->
+    <div class="topnav">
+        <a class="active" href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
+        <a href=#robsrings>Rob's Rings</a>
+        <div class="search-container">
+            <form action="/action_page.php">
+                <input type="text" placeholder="Search.." name="search">
+                <button type="submit"><i class="fa fa-search"></i></button>
+            </form>
+        </div>
+    </div>
 
+    <!-- initiate pop up form -->
+    <button class="open-button" onclick="openForm()">Add Inventory</button>
 
+    <div class="form-popup" id="myForm">
+        <form onsubmit="submitForm()" class="form-container">
+            <h1>Add Inventory</h1>
 
-    <table class="table table-hover">
+            <label for="sku"><b>Sku #</b></label>
+            <input type="text" placeholder="Enter Sku #" name="sku" required>
+
+            <label for="Description"><b>Description</b></label>
+            <input type="text" placeholder="Enter Description" name="description" required>
+
+            <label for="quantity"><b>Quantity</b></label>
+            <input type="text" placeholder="Enter Quantity" name="quantity" required>
+
+            <label for="Cost"><b>Cost</b></label>
+            <input type="text" placeholder="Enter Cost" name="cost" required>
+
+            <label for="Price"><b>Price</b></label>
+            <input type="text" placeholder="Enter Price" name="price" required>
+
+            <div class="imageInput">
+                Upload Image File<input type="file" accept="image/*" name="image" id="file"
+                                        class="hide_file" onchange="loadFile(event)">
+            </div>
+            <div><img id="output" width="200" /></div>
+
+            <button type="submit" class="btn" onclick="submitForm()">Add Inventory</button>
+            <button type="button" class="btn cancel" onclick="closeForm()">Cancel</button>
+        </form>
+    </div>
+
+    <!-- for table  -->
+    <table class="table table-hover" id="main_table">
         <thead>
             <tr>
                 <th scope="col">Sku #</th>
@@ -33,13 +85,18 @@
                 <td class="quantity__1">0</td>
                 <td>$0.93</td>
                 <td>$10.00</td>
-                <td><img src="C:\Users\Jasmyne.Boggs\Desktop\projects\VUCS-Inventory-Mockup\skull ring.png" width="200" height="200" alt="skull ring"></td>
-                <td><select class="add__type">
-                    <option value="add" selected>+</option>
-                    <option value="subtract" selected>-</option>
-                </select>
-                <input type="number" class="add__value" placeholder="Value">
-                <button type="button" class="btn btn-success" id="btn" >Select</button></td>
+                <td>
+                    <img src="skullring.png" width="200" height="200"
+                         alt="skull ring">
+                </td>
+                <td>
+                    <select class="add__type">
+                        <option value="add" selected>+</option>
+                        <option value="subtract" selected>-</option>
+                    </select>
+                    <input type="number" class="add__value" placeholder="Value">
+                    <button type="button" class="btn btn-success" id="btn">Select</button>
+                </td>
             </tr>
             <tr>
                 <th scope="row">1018</th>
@@ -47,13 +104,18 @@
                 <td class="quantity__2">0</td>
                 <td>$0.93</td>
                 <td>$10.00</td>
-                <td><img src="C:\Users\Jasmyne.Boggs\Desktop\projects\VUCS-Inventory-Mockup\skull ring.png"  width="200" height="200" alt="skull ring"></td>
-                <td><select class="add__type">
+                <td>
+                    <img src="skullring.png" width="200" height="200"
+                         alt="skull ring">
+                </td>
+                <td>
+                    <select class="add__type">
                         <option value="add" selected>+</option>
                         <option value="subtract" selected>-</option>
                     </select>
                     <input type="number" class="add__value" placeholder="Value">
-                    <button type="button" class="btn btn-success" id="btn1">Select</button></td>
+                    <button type="button" class="btn btn-success" id="btn1">Select</button>
+                </td>
             </tr>
             <tr>
                 <th scope="row">1017</th>
@@ -61,13 +123,18 @@
                 <td class="quantity__3">0</td>
                 <td>$0.93</td>
                 <td>$10.00</td>
-                <td><img src="C:\Users\Jasmyne.Boggs\Desktop\projects\VUCS-Inventory-Mockup\skull ring.png"  width="200" height="200" alt="skull ring"></td>
-                <td><select class="add__type">
+                <td>
+                    <img src="skullring.png" width="200" height="200"
+                         alt="skull ring">
+                </td>
+                <td>
+                    <select class="add__type">
                         <option value="add" selected>+</option>
                         <option value="subtract" selected>-</option>
                     </select>
                     <input type="number" class="add__value" placeholder="Value">
-                    <button type="button" class="btn btn-success" id="btn2">Select</button></td>
+                    <button type="button" class="btn btn-success" id="btn2">Select</button>
+                </td>
             </tr>
             <tr>
                 <th scope="row">1016</th>
@@ -75,17 +142,183 @@
                 <td class="quantity__4">0</td>
                 <td>$0.93</td>
                 <td>$10.00</td>
-                <td><img src="C:\Users\Jasmyne.Boggs\Desktop\projects\VUCS-Inventory-Mockup\skull ring.png"  width="200" height="200" alt="skull ring"></td>
-                <td><select class="add__type">
+                <td>
+                    <img src="skullring.png" width="200" height="200"
+                         alt="skull ring">
+                </td>
+                <td>
+                    <select class="add__type">
                         <option value="add" selected>+</option>
                         <option value="subtract" selected>-</option>
                     </select>
                     <input type="number" class="add__value" placeholder="Value">
-                    <button type="button" class="btn btn-success" id="btn3">Select</button></td>
+                    <button type="button" class="btn btn-success" id="btn3">Select</button>
+                </td>
             </tr>
         </tbody>
     </table>
-    <script src="robRings.js"></script>
 </body>
+</html>
 
-</html> 
+<script src="robRings.js"></script>
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<style>
+    * {
+        box-sizing: border-box;
+    }
+
+    .topnav {
+        overflow: hidden;
+        background-image: url(flame.jpg);
+    }
+
+        .topnav a {
+            float: left;
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+            font-size: 17px;
+        }
+
+            .topnav a:hover {
+                background-color: #ddd;
+                color: white;
+            }
+
+            .topnav a.active {
+                background-color: #2196F3;
+                color: white;
+            }
+
+        .topnav .search-container {
+            float: right;
+        }
+
+        .topnav input[type=text] {
+            padding: 6px;
+            margin-top: 8px;
+            font-size: 17px;
+            border: none;
+        }
+
+        .topnav .search-container button {
+            float: right;
+            padding: 6px 10px;
+            margin-top: 8px;
+            margin-right: 16px;
+            background: #ddd;
+            font-size: 17px;
+            border: none;
+            cursor: pointer;
+        }
+
+            .topnav .search-container button:hover {
+                background: #ccc;
+            }
+
+    @media screen and (max-width: 600px) {
+        .topnav .search-container {
+            float: none;
+        }
+
+            .topnav a, .topnav input[type=text], .topnav .search-container button {
+                float: none;
+                display: block;
+                text-align: left;
+                width: 100%;
+                margin: 0;
+                padding: 14px;
+            }
+
+        .topnav input[type=text] {
+            border: 1px solid #ccc;
+        }
+    }
+</style>
+
+
+
+
+<style>
+    body {
+        font-family: Arial, Helvetica, sans-serif;
+    }
+
+    * {
+        box-sizing: border-box;
+    }
+
+    /* Button used to open the contact form - fixed at the bottom of the page */
+    .open-button {
+        background-color: #555;
+        color: white;
+        padding: 16px 20px;
+        border: none;
+        cursor: pointer;
+        opacity: 0.8;
+        position: fixed;
+        bottom: 23px;
+        right: 28px;
+        width: 280px;
+    }
+
+    /* The popup form - hidden by default */
+    .form-popup {
+        display: none;
+        position: fixed;
+        bottom: 0;
+        right: 15px;
+        border: 3px solid #f1f1f1;
+        z-index: 9;
+    }
+
+    /* Add styles to the form container */
+    .form-container {
+        max-width: 300px;
+        background-color: white;
+    }
+
+        /* Full-width input fields */
+        .form-container input[type=text],
+        .form-container input[type=password] {
+            width: 100%;
+            padding: 5px;
+            margin: 5px 0 22px 0;
+            border: none;
+            background: #f1f1f1;
+        }
+
+            /* When the inputs get focus, do something */
+            .form-container input[type=text]:focus,
+            .form-container input[type=password]:focus {
+                background-color: #ddd;
+                outline: none;
+            }
+
+        /* Set a style for the submit/login button */
+        .form-container .btn {
+            background-color: #4CAF50;
+            color: white;
+            padding: 16px 20px;
+            border: none;
+            cursor: pointer;
+            width: 100%;
+            margin-bottom: 10px;
+            opacity: 0.8;
+        }
+
+        /* Add a red background color to the cancel button */
+        .form-container .cancel {
+            background-color: red;
+        }
+
+        /* Add some hover effects to buttons */
+        .form-container .btn:hover,
+        .open-button:hover {
+            opacity: 1;
+        }
+</style>
