--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
                 <td class="quantity__1">0</td>
                 <td>$0.93</td>
                 <td>$10.00</td>
-                <td><img src="skull ring.png" width="200" height="200" alt="skull ring"></td>
+                <td><img src="skull ring.png" width="200" height="200" alt="skull ring"><button type="button" class="edit_btn">Edit</button></td>
+                
             </tr>
             <tr>
                 <th scope="row">1018</th>
@@ -45,7 +46,7 @@
                 <td class="quantity__2">0</td>
                 <td>$0.93</td>
                 <td>$10.00</td>
-                <td><img src="skull ring.png"  width="200" height="200" alt="skull ring"></td>
+                <td><img src="skull ring.png"  width="200" height="200" alt="skull ring"><button type="button" class="edit_btn">Edit</button></td>
             </tr>
             <tr>
                 <th scope="row">1017</th>
@@ -53,7 +54,7 @@
                 <td class="quantity__3">0</td>
                 <td>$0.93</td>
                 <td>$10.00</td>
-                <td><img src="skull ring.png"  width="200" height="200" alt="skull ring"></td>
+                <td><img src="skull ring.png"  width="200" height="200" alt="skull ring"><button type="button" class="edit_btn">Edit</button></td>
             </tr>
             <tr>
                 <th scope="row">1016</th>
@@ -61,7 +62,7 @@
                 <td class="quantity__4">0</td>
                 <td>$0.93</td>
                 <td>$10.00</td>
-                <td><img src="skull ring.png"  width="200" height="200" alt="skull ring"></td>
+                <td><img src="skull ring.png"  width="200" height="200" alt="skull ring"><button type="button" class="edit_btn">Edit</button></td>
             </tr>
         </tbody>
     </table>
