--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
 
 
     <div class="container">
-        <h2>Modal Example</h2>
-        <!-- Button to Open the Modal -->
+             <!-- Button to Open the Modal -->
         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
             Add Inventory
         </button>
@@ -289,7 +288,10 @@
     body {
         font-family: Arial, Helvetica, sans-serif;
     }
-
+    /*Modal button - 5/26/19 working on trying to left align*/
+    .btn btn-primary {
+        left: 0;
+    }
     /* The Modal (background) */
     .modal {
         display: none; /* Hidden by default */
