--- a/index.html
+++ b/index.html
@@ -80,6 +80,12 @@
             </form>
         </div>
     </div>
+
+    <script
+  src="http://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
+  
     <script src="robRings.js"></script>
 </body>
 
