--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <input type="text" id="new_cost"  placeholder="Cost">
                 <input type="text" id="new_price"  placeholder="Price">
                 <input type="file"  accept="image/*" name="image" id="file" class="hide_file"  >
-                <button type="button" class="btn btn-success" id="btn-add-new">Submit</button>
+                <button type="button" class="btn btn-success" id="btn-add-new" onclick="addInfo()">Submit</button>
             </form>
         </div>
     </div>
